# Data-Exfiltration-Security-Framework

./: .gitignore  BUILD.bazel  Dockerfile  Makefile  README.md  WORKSPACE  build.sh  controller.sh  deps.bzl  ebpf_agent.service  go.mod  go.sum  image.sh  post-install.sh  run  run.sh
cmd/: Makefile  main.go
cmd/cmd/: bkegress.go  bkingress.go  commands.go  limitscli.go  malProcessDetectedCt.go  root.go  unblock.go
cmd/consts/: const.go
controller/: dependency-reduced-pom.xml  pom.xml
controller/src/main/java/com/synarcs/com/: App.java  ControllerInspectProtocolsBuilder.java  ControllerStreamRunner.java  EventsConsumer.java  IController.java  KafkaConfig.java  NodeCache.java
controller/src/main/java/com/synarcs/com/cache/: NodeCache.java
controller/src/main/java/com/synarcs/com/config/: ControllerConfigLoader.java  KafkaConfig.java
controller/src/main/java/com/synarcs/com/config/yaml/: Config.java  Controller.java  KafkaBrokerConfig.java  SchemaRegistryConfig.java
controller/src/main/java/com/synarcs/com/controller/: DnsSecController.java
controller/src/main/java/com/synarcs/com/powerdns/: RecursorBlackList.java
controller/src/main/java/com/synarcs/com/protocols/: DnsExfilPorts.java  DnsFeatures.java  DnsProtocol.java  IFeatureNetworkProtocol.java  IFeatureTransportProtocol.java  ProtocolEnums.java
controller/src/main/java/com/synarcs/com/repository/: DNSBlacklistRepository.java  MaliciousDomain.java
controller/src/main/java/com/synarcs/com/service/: BlacklistDomain.java
controller/src/main/resources/: application.yml  config.yaml
controller/src/test/java/com/synarcs/com/: AppTest.java
data/: mx_records.csv  resolve.py  top-host.csv
infrastructure/: breach.sh  compile.sh  gen_exfil_domains.py  init.sql  install.sh  pdns.sh  pdns_backend.conf
infrastructure/images/: build.sh
infrastructure/images/c2/: Dockerfile.dnscat_server  Dockerfile.iodine  Dockerfile.sliver
infrastructure/images/raw/: Dockerfile.exf
infrastructure/kafka/: kafka-config.yaml
infrastructure/local/: dns_server.pl  install.sh  zone_config  zones
infrastructure/monitoring/: start.sh  stop.sh
infrastructure/pdns/: block.lua  luac.out  pdns-recursor.conf  pdns.conf  zones.sh
infrastructure/pdns/scripts/: Makefile  block.lua
kernel/: -Wbackslash-newline-escape  BUILD.bazel  Makefile  bridge_nf.c  bridge_nf.h  bridge_tc.c  consts.h  dns.h  dns_p2p.c  dns_sock.c  dns_tc.c  dns_tun.c  dns_xdp.c  macro.h  main  nf_sock.c  offsets.h  raw_proc.h  utils.h  vxlan.h
kernel/ir/: netlink_ir  tc_ir
kernel_space/: Makefile  dns_xdp_skb_helpers.h  egress.c  events.h  header.h  init.h  kill.py  main.c  maps.h  runner.py  xdp.c  xdp_helper.h
model/: dns_sec.onnx  inference.py  main.py
model/infer/: consts.py  consts.spec  infer.py  inference.py  inference.spec  load.py  requirements.txt
model/train/: main.py  requirements.txt
node_agent/: BUILD.bazel  Makefile  config.yaml  infer.spec  inference.spec  main  main.go  main_test.go
pkg/cli/: cli.go  clid.go
pkg/conntrack/: clean.go
pkg/events/: BUILD.bazel  events.go  kernelDropped.go  limits.go  streamClient.go  streamConsumer.go  streamProducer.go  tracing.go
pkg/events/stream/: consts.go  streamConsumer.go  streamProducer.go  utils.go
pkg/kprobe/: common.go  tunnel.go  wg.go
pkg/maps/: BUILD.bazel  exfil.go
pkg/model/: BUILD.bazel  feature.go  inferStruct.go  inferenceListener.go  onnx.go  parse.go
pkg/netfilter/: bridge_nf.go
pkg/netinet/: BUILD.bazel  eth_xdp.go  iface.go  ipam.go  overlay.go  systemResolve.go  vlan.go
pkg/rpc/: BUILD.bazel  Makefile  client.go  server.go
pkg/rpc/pb/: BUILD.bazel  exfil_sec.pb.go  exfil_sec_grpc.pb.go
pkg/rpc/proto/: BUILD.bazel  exfil_sec.proto
pkg/sidecar/: consts.go  dns_sock_skbuff.go  sdr_hook.go
pkg/tc/: BUILD.bazel  bridge_tc.go  tc.go  tunnel.go  tunnel_tc.go  tunnel_vxlan.go  tuntap_tc.go
pkg/utils/: BUILD.bazel  cache.go  consts.go  stream.go  tldStore.go  utils.go  utils_test.go  vmprocfs.go
pkg/xdp/: BUILD.bazel  sniff.go  xdp.go
scripts/: a.out  becnh.py  becnh.sh  brctl.sh  clean.sh  container.sh  exfil.sh  host.sh  iface.sh  main  packgen.cc  poll.c  skbrun.c  ss.c  uring.c  vxtunnels.sh
sdr/: Makefile  sdr_hook.go
sniff/: .dns.py.swp  .strclar.swp  becnh.py  dns.py  dns_ipv6.py  dns_ns.py  dns_tcp.py  ipv6.py  stress.py  stress.sh
user_space/: bpf_maps.py  events_map.py  loader.py  model.py  nodeAgent.py  sniffer.py
