load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "node_agent_lib",
    srcs = ["main.go"],
    importpath = "github.com/Data-Exfiltration-Security-Framework/node_agent",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/netinet",
        "//pkg/tc",
        "//pkg/xdp",
        "//pkg/eve"
        "@com_github_cilium_ebpf//:ebpf",
        "@com_github_cilium_ebpf//ringbuf",
        "@org_golang_x_sys//cpu",
    ],
)

go_binary(
    name = "node_agent",
    embed = [":node_agent_lib"],
    visibility = ["//visibility:public"],
)
