load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "node_agent_lib",
    srcs = ["main.go"],
    importpath = "github.com/Synarcs/Data-Exfiltration-Security-Framework/node_agent",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/netinet",
        "//pkg/rpc:rpc_lib",
        "//pkg/tc",
        "//pkg/utils",
    ],
)

go_binary(
    name = "node_agent",
    embed = [":node_agent_lib"],
    visibility = ["//visibility:public"],
)
