load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "model",
    srcs = ["parse.go"],
    importpath = "github.com/Data-Exfiltration-Security-Framework/pkg/model",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/netinet",
        "@com_github_google_gopacket//:gopacket",
        "@com_github_google_gopacket//layers",
        "@com_github_google_gopacket//pcap",
    ],
)
