load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "netinet",
    srcs = [
        "iface.go",
        "overlay.go",
    ],
    importpath = "github.com/Data-Exfiltration-Security-Framework/pkg/netinet",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/utils",
        "@com_github_google_gopacket//pcap",
        "@com_github_vishvananda_netlink//:netlink",
        "@com_github_vishvananda_netns//:netns",
        "@org_golang_x_sys//unix",
    ],
)
