load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "pb",
    srcs = [
        "exfil_sec.pb.go",
        "exfil_sec_grpc.pb.go",
    ],
    importpath = "github.com/Data-Exfiltration-Security-Framework/pkg/rpc/pb",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
