load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "Framework_proto",
    srcs = ["exfil_sec.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "Framework_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/Data-Exfiltration-Security-Framework",
    proto = ":Framework_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "Data-Exfiltration-Security-Framework",
    embed = [":Framework_go_proto"],
    importpath = "github.com/Data-Exfiltration-Security-Framework",
    visibility = ["//visibility:public"],
)
